--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ github_username:  jekyll
 name: Christmas Recipes
 markdown: redcarpet
 pygments: true
-baseurl: /christmas-recipes
+baseurl: /jixizhgh
