--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
 title: 历代诗词歌赋佳品
-email: your-email@domain.com
+
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  吟咏诗句，陶冶情操，本页列出历代诗词歌赋，旨在探求其精髓，吸收其养分。
 baseurl: /jixizhgh # the subpath of your site, e.g. /blog/
 
 
