--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   
 baseurl: /jixizhgh # the subpath of your site, e.g. /blog/
 
-url: http://jixizh.github.io
+url: http://jixizh.github.io/jixizhgh
 
 
 
